--- a/public/citizen/complaint-detail.html
+++ b/public/citizen/complaint-detail.html
@@ -20,8 +20,8 @@
         </div>
     </main>
     <div id="footer-placeholder" class="footer"></div>
-    <script src="../js/shared.js"></script>
-    <script src="../js/complaints.js"></script>
+    <script src="/public/js/shared.js"></script>
+    <script src="js/complaints.js"></script>
     <script>
         requireLogin();
         document.addEventListener('DOMContentLoaded', () => {
