--- a/public/citizen/dashboard.html
+++ b/public/citizen/dashboard.html
@@ -73,7 +73,7 @@
     
     <div id="footer-placeholder"></div>
     
-    <script src="/public/js/shared.js" type="module"></script>
+    <script src="/js/shared.js" type="module"></script>
     <script src="js/citizen-dashboard-init.js" type="module"></script>
 </body>
 </html>
