--- a/public/admin/dashboard.html
+++ b/public/admin/dashboard.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="/css/style.css">
     <!-- Optional: Font Awesome for icons if you want to use them -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <!-- Chart.js CDN link removed as per your request -->
 </head>
 <body>
     <!-- Include common header -->
@@ -75,15 +74,43 @@
             </section>
 
             <section class="charts-section">
-                <h2>Visualizations</h2>
+                <h2>Visualizations & Predictions</h2> <!-- Updated title -->
                 <div class="charts-grid">
                     <div class="chart-card card">
-                        <h3>Complaint Status</h3>
-                        <canvas id="complaintsChart"></canvas>
+                        <h3>Complaint Status Distribution</h3>
+                        <div id="complaint-status-chart-container" class="chart-image-container">
+                            <p class="loading-text">Loading chart...</p>
+                            <img id="complaint-status-chart" src="" alt="Complaint Status Distribution" style="width:100%; height:auto; display:none;">
+                        </div>
                     </div>
                     <div class="chart-card card">
-                        <h3>User Roles</h3>
-                        <canvas id="usersChart"></canvas>
+                        <h3>Complaints Over Time</h3>
+                        <div id="complaint-trends-chart-container" class="chart-image-container">
+                            <p class="loading-text">Loading chart...</p>
+                            <img id="complaint-trends-chart" src="" alt="Complaints Over Time" style="width:100%; height:auto; display:none;">
+                        </div>
+                    </div>
+                    <div class="chart-card card">
+                        <h3>User Role Distribution</h3>
+                        <div id="user-role-chart-container" class="chart-image-container">
+                            <p class="loading-text">Loading chart...</p>
+                            <img id="user-role-chart" src="" alt="User Role Distribution" style="width:100%; height:auto; display:none;">
+                        </div>
+                    </div>
+                    <div class="chart-card card">
+                        <h3>Predict Complaint Resolution Time</h3>
+                        <div id="prediction-section">
+                            <div class="form-group">
+                                <label for="desc_length">Description Length (words)</label>
+                                <input type="number" id="desc_length" class="form-control" value="100" min="0">
+                            </div>
+                            <div class="form-group">
+                                <label for="num_evidence">Number of Evidence Files</label>
+                                <input type="number" id="num_evidence" class="form-control" value="1" min="0">
+                            </div>
+                            <button id="predict-btn" class="btn btn-primary btn-small"><i class="fas fa-magic"></i> Predict</button>
+                            <p id="prediction-result" class="form-text-muted" style="margin-top: 1rem; font-weight: 600;"></p>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -97,6 +124,7 @@
     <!-- The order here matters: shared.js and admin.js must be loaded before dashboard-init.js -->
     <script src="js/shared.js" type="module"></script>
     <script src="js/admin.js" type="module"></script>
+    <!-- Correctly link dashboard-init.js and load as a module -->
     <script src="js/dashboard.js" type="module"></script>
 </body>
 </html>
