--- a/public/citizen/my-complaints.html
+++ b/public/citizen/my-complaints.html
@@ -21,8 +21,8 @@
         </div>
     </main>
     <div id="footer-placeholder" class="footer"></div>
-    <script src="../js/shared.js"></script>
-    <script src="../js/complaints.js"></script>
+    <script src="/js/shared.js"></script>
+    <script src="js/complaints.js"></script>
     <script>
         requireLogin();
         document.addEventListener('DOMContentLoaded', () => {
