--- a/public/admin/analytics.html
+++ b/public/admin/analytics.html
@@ -10,13 +10,18 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-  <script src="https://unpkg.com/leaflet.heat@0.2.0/dist/leaflet-heat.min.js"></script> <!-- Corrected URL -->
+  <script src="https://unpkg.com/leaflet.heat@0.2.0/dist/leaflet-heat.min.js"></script>
   <style>
     canvas {
       max-height: 450px !important;
       object-fit: contain !important;
     }
   </style>
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; 
+    connect-src 'self' http://localhost:8000 http://localhost:8001 http://localhost:5001 https://nominatim.openstreetmap.org https://*.tile.openstreetmap.org; 
+    img-src 'self' data: http://localhost:8001 http://localhost:5001 https://*.tile.openstreetmap.org; 
+    script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com https://unpkg.com; 
+    style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com https://fonts.googleapis.com;">
 </head>
 <body class="bg-gray-100">
   <div class="flex min-h-screen">
